--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,10 +3,15 @@ body {
     background: darkgray;
 }
 
-#game {
+.hide {
+    display: none;
+}
+
+#app {
     width: 1024px;
     height: 600px;
     margin: 0 auto;
+    position: relative;
 }
 
 #github-ribbon {
@@ -14,4 +19,22 @@ body {
     top: 0;
     left: 0;
     border: 0;
+}
+
+#nick-input {
+    width: 300px;
+    height: 50px;
+    position: absolute;
+    left: calc((1024px - 300px) / 2);
+    top: 250px;
+}
+
+#nick-input > input {
+    width: 100%;
+    height: 100%;
+    font-size: 40px;
+    outline: none;
+    text-align: center;
+    border: 10px solid pink;
+    border-radius: 5px;
 }
