--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,19 +22,20 @@ body {
 }
 
 #nick-input {
+    border: 10px solid pink;
     width: 300px;
     height: 50px;
     position: absolute;
     left: calc((1024px - 300px) / 2);
-    top: 250px;
+    top: 200px;
 }
 
 #nick-input > input {
+    border: none;
     width: 100%;
     height: 100%;
     font-size: 40px;
     outline: none;
     text-align: center;
-    border: 10px solid pink;
     border-radius: 5px;
 }
